--- a/elestio.yml
+++ b/elestio.yml
@@ -2,7 +2,15 @@ ports:
   - protocol: "HTTPS"
     targetProtocol: "HTTP"
     listeningPort: "443"
-    targetPort: "27938"
+    targetPort: "8080"
+    targetIP: "172.17.0.1"
+    public: true
+    path: "/"
+    isAuth: false
+  - protocol: "HTTPS"
+    targetProtocol: "HTTP"
+    listeningPort: "22974"
+    targetPort: "8008"
     targetIP: "172.17.0.1"
     public: true
     path: "/"
