--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - POSTGRES_USER=synapse
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_INITDB_ARGS=--encoding=UTF-8 --locale=C
+    ports:
+      - 172.17.0.1:52282:5432
 
   element:
     image: vectorim/element-web:${SOFTWARE_VERSION_TAG}
@@ -37,3 +39,15 @@ services:
       - postgres
     volumes:
       - ./synapse:/data
+
+  pgadmin4:
+    image: elestio/pgadmin:latest
+    restart: always
+    environment:
+      PGADMIN_DEFAULT_EMAIL: ${ADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${ADMIN_PASSWORD}
+      PGADMIN_LISTEN_PORT: 8080
+    ports:
+      - "172.17.0.1:37620:8080"
+    volumes:
+      - ./servers.json:/pgadmin4/servers.json
