--- a/elestio.yml
+++ b/elestio.yml
@@ -15,9 +15,19 @@ ports:
     public: true
     path: "/"
     isAuth: false
+  - protocol: "HTTPS"
+    targetProtocol: "HTTP"
+    listeningPort: "33374"
+    targetPort: "37620"
+    targetIP: "172.17.0.1"
+    public: true
+    path: "/"
+    isAuth: false
 environments:
   - key: "SOFTWARE_VERSION_TAG"
     value: "latest"
+  - key: "ADMIN_EMAIL"
+    value: "[EMAIL]"
   - key: "ADMIN_PASSWORD"
     value: "random_password"
   - key: "DOMAIN"
@@ -46,4 +56,8 @@ webUI:
   - url: "https://[CI_CD_DOMAIN]"
     label: "Element"
     login: "admin"
+    password: "[ADMIN_PASSWORD]"
+  - url: "https://[CI_CD_DOMAIN]:33374"
+    label: "pgAdmin"
+    login: "[ADMIN_EMAIL]"
     password: "[ADMIN_PASSWORD]"
